syntax = "proto3";

package Middle.Grpc;

// The greeting service definition.
service Middler {
  // Sends a greeting
  rpc SayHello (MiddleRequest) returns (MiddleReply);
}

// The request message containing the user's name.
message MiddleRequest {
  string name = 1;
}

// The response message containing the greetings.
message MiddleReply {
  string message = 1;
}
